--- a/source/partials/blocks/slider.htm
+++ b/source/partials/blocks/slider.htm
@@ -4,8 +4,11 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="block">
-					<h1 class="animated fadeInUp">A Digital Marketing <br>  &#38; Design Agency</h1>
-					<p class="animated fadeInUp">We love the Web and the work we do.We work closely with our clients to deliver </br>  the best possible solutions for their needs</p>
+					<h1 class="animated fadeInUp">Willkommen bei der Deutschen Bildungsstiftung
+</h1>
+					<p class="animated fadeInUp">Förderung der Bildung in ganz Deutschland durch kollaborativen Vermögensaufbau und transparente Fondsverwaltung.
+
+					</p>
 					<a href="https://themefisher.com/free-bootstrap-templates/" class="btn btn-main animated fadeInUp" >Free Bootstrap Templates</a>
 				</div>
 			</div>
