--- a/source/partials/blocks/call-to-action.htm
+++ b/source/partials/blocks/call-to-action.htm
@@ -3,10 +3,11 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="block">
-					<h2 class="mb-3">We design delightful digital experiences.</h2>
-					<p>Read more about what we do and our philosophy of design. Judge for yourself The work and results <br> we’ve
-						achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-					<a class="btn btn-main btn-solid-border" href="contact.html">Tell Us Your Story</a>
+					<h2 class="mb-3">Machen Sie heute einen Unterschied</h2>
+					<p>Ihr Beitrag kann helfen, die Zukunft der Bildung in Deutschland zu gestalten.
+
+					</p>
+					<a class="btn btn-main btn-solid-border" href="contact.html">Jetzt Spenden</a>
 				</div>
 			</div>
 		</div>
