--- a/source/partials/blocks/service.htm
+++ b/source/partials/blocks/service.htm
@@ -4,67 +4,30 @@
     <div class="row">
       <div class="col-12 text-center">
         <div class="section-title">
-          <h2>Our Services</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, <br> there live the
-            blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+          <h2>Hauptmerkmale</h2>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Virtuelle Konten</h4>
+          <p>Jede Schule in Deutschland hat ein eigenes virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="ion-compass"></i>
-          <h4>Web Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Finanzielle Transparenz</h4>
+          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Schule und die Herkunft ihrer Mittel.</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="ion-image"></i>
-          <h4>App Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-bug"></i>
-          <h4>Start Up</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-headphone"></i>
-          <h4>Logo Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-leaf"></i>
-          <h4>Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-planet"></i>
-          <h4>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-earth"></i>
-          <h4>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Kollaborativer Vermögensaufbau</h4>
+          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Schulen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
         </div>
       </div>
     </div>
