--- a/source/scss/landing-page.scss
+++ b/source/scss/landing-page.scss
@@ -3,8 +3,8 @@ serif;
 $secondary-font: 'Poppins',
 serif;
 $light: #fff;
-$primary-color:#655E7A;
-$secondary-color:#2E7EED;
+$primary-color:#002D62;
+$secondary-color:#F5F5F5;
 
 body {
 	font-family: $primary-font;
