--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,10 +1,12 @@
 $light: #fff;
 $primary-color: #655E7A;
+$primary-color-second: #4A90E2;
+$primary-color-third: #FF6600;
 $secondary-color: #1bbb1b;
 $success: #1bbb1b;
 $black: #000;
 $alert:#c7254e;
 $border-color:#dedede;
-$primary-font:'Roboto', sans-serif;
-$secondary-font:'Volkhov', serif;
+$primary-font:'Calibri', sans-serif;
+$secondary-font:'Arial', serif;
 $icon-font: 'themefisher-font';
