--- a/source/partials/blocks/service.htm
+++ b/source/partials/blocks/service.htm
@@ -11,23 +11,23 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
+          <i class="icon ion-cash"></i>
           <h4>Virtuelle Konten</h4>
-          <p>Jede Schule in Deutschland hat ein eigenes virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
+          <p>Jede Kita, Schule oder Tageseltern in Deutschland haben ein eigenes, virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="ion-compass"></i>
+          <i class="ion-eye"></i>
           <h4>Finanzielle Transparenz</h4>
-          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Schule und die Herkunft ihrer Mittel.</p>
+          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Bildungseinrichtung und die Herkunft ihrer Mittel.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="ion-image"></i>
+          <i class="ion-android-people"></i>
           <h4>Kollaborativer Vermögensaufbau</h4>
-          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Schulen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
+          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Bildungseinrichtungen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
         </div>
       </div>
     </div>
