--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -65,7 +65,7 @@
 <!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
 <!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
 <!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
-<!--									<li><a class="dropdown-item @@pricing" href="pricing.html">Pricing Table</a></li>-->
+<!--									<li><a class="dropdown-item @@pricing" href="imprint.html">Pricing Table</a></li>-->
 <!--								</ul>-->
 <!--							</li>-->
 							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
