--- a/source/partials/blocks/testimonial.htm
+++ b/source/partials/blocks/testimonial.htm
@@ -9,82 +9,31 @@
         </div>
       </div>
     </div>
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <div class="block">
-          <ul class="counter-box clearfix">
+    <div class="row">
+        <div class="col-12">
+          <ul class="counter-box ">
             <li>
               <div class="counter-item">
-                <i class="ion-ios-chatboxes-outline"></i>
-                <h4 class="count" data-count="99">0</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-            <li>
-              <div class="counter-item">
-                <i class="ion-ios-glasses-outline"></i>
+                <i class="ion-ios-paper"></i>
                 <h4 class="count" data-count="45">0</h4>
-                <span>Article Written</span>
+                <span>Registrierte Einrichtungen</span>
               </div>
             </li>
             <li>
               <div class="counter-item">
-                <i class="ion-ios-compose-outline"></i>
+                <i class="ion-social-euro-outline"></i>
+                <h4 class="count" data-count="99">0</h4>
+                <span>Ausschüttungen</span>
+              </div>
+            </li>
+            <li>
+              <div class="counter-item">
+                <i class="ion-cash  "></i>
                 <h4 class="count" data-count="125">0</h4>
-                <span>Projects Completed</span>
-              </div>
-            </li>
-            <li>
-              <div class="counter-item">
-                <i class="ion-ios-timer-outline"></i>
-                <h4 class="count" data-count="200">0</h4>
-                <span>Combined Projects</span>
+                <span>Spenden</span>
               </div>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="col-md-5 col-md-offset-1">
-        <div class="testimonial-carousel text-center">
-          <div class="testimonial-slider owl-carousel">
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
