--- a/source/partials/blocks/call-to-action.htm
+++ b/source/partials/blocks/call-to-action.htm
@@ -7,7 +7,7 @@
 					<p>Ihr Beitrag kann helfen, die Zukunft der Bildung in Deutschland zu gestalten.
 
 					</p>
-					<a class="btn btn-main btn-solid-border" href="contact.html">Jetzt Spenden</a>
+					<a class="btn btn-main btn-solid-border" href="kontakt.html">Jetzt Spenden</a>
 				</div>
 			</div>
 		</div>
