--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -35,7 +35,7 @@
 <!--									</li>-->
 								</ul>
 							</li>
-							<li class="nav-item @@service"><a class="nav-link" href="service.html">Über uns</a></li>
+							<li class="nav-item @@about"><a class="nav-link" href="about.html">Über uns</a></li>
 <!--							<li class="nav-item dropdown @@blog">-->
 <!--								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"-->
 <!--									aria-expanded="false">Blog <span class="ion-ios-arrow-down"></span></a>-->
@@ -61,14 +61,14 @@
 <!--								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true"-->
 <!--									aria-expanded="false">Pages <span class="ion-ios-arrow-down"></span></a>-->
 <!--								<ul class="dropdown-menu" aria-labelledby="dropdown05">-->
-<!--									<li><a class="dropdown-item @@about" href="imprint.html">About Us</a></li>-->
+<!--									<li><a class="dropdown-item @@about" href="impressum.html">About Us</a></li>-->
 <!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
 <!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
 <!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
-<!--									<li><a class="dropdown-item @@pricing" href="imprint.html">Pricing Table</a></li>-->
+<!--									<li><a class="dropdown-item @@pricing" href="impressum.html">Pricing Table</a></li>-->
 <!--								</ul>-->
 <!--							</li>-->
-							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
+							<li class="nav-item @@contact"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
 						</ul>
 					</div>
 				</nav>
