--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,8 +18,6 @@
 
 @import "templates/_call-to-action.scss";
 
-@import "templates/_service.scss";
-
 @import "templates/_feature.scss";
 
 @import "templates/_portfolio.scss";
@@ -37,6 +35,8 @@
 @import "templates/_clients.scss";
 
 @import "templates/_about.scss";
+
+@import "templates/_mission.scss";
 
 @import "templates/_instagram.scss";
 
