--- a/source/partials/blocks/footer-navigation.htm
+++ b/source/partials/blocks/footer-navigation.htm
@@ -5,9 +5,9 @@
 			<div class="col-md-12">
 				<div class="footer-manu">
 					<ul>
-						<li><a href="imprint.html">Über uns</a></li>
-						<li><a href="contact.html">Kontakt</a></li>
-						<li><a href="imprint.html">Impressum</a></li>
+						<li><a href="about.html">Über uns</a></li>
+						<li><a href="kontakt.html">Kontakt</a></li>
+						<li><a href="impressum.html">Impressum</a></li>
 					</ul>
 				</div>
 				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
