--- a/source/partials/blocks/hauptmerkmale.htm
+++ b/source/partials/blocks/hauptmerkmale.htm
@@ -1,5 +1,5 @@
 <!-- Service Start -->
-<section class="service">
+<section class="about">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -10,21 +10,21 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-6">
-        <div class="service-item">
+        <div class="about-item">
           <i class="icon ion-cash"></i>
           <h4>Virtuelle Konten</h4>
           <p>Jede Kita, Schule oder Tageseltern in Deutschland haben ein eigenes, virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
-        <div class="service-item">
+        <div class="about-item">
           <i class="ion-eye"></i>
           <h4>Finanzielle Transparenz</h4>
           <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Bildungseinrichtung und die Herkunft ihrer Mittel.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
-        <div class="service-item">
+        <div class="about-item">
           <i class="ion-android-people"></i>
           <h4>Kollaborativer Vermögensaufbau</h4>
           <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Bildungseinrichtungen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
