--- a/source/partials/blocks/mission.htm
+++ b/source/partials/blocks/mission.htm
@@ -1,5 +1,5 @@
 <!-- Wrapper Start -->
-<section class="about section">
+<section class="mission section">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-7">
