--- a/source/partials/blocks/page-title.htm
+++ b/source/partials/blocks/page-title.htm
@@ -1,4 +1,4 @@
-<section class="page-title bg-2">
+<section class="page-title @@background">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
