--- a/source/scss/templates/_about.scss
+++ b/source/scss/templates/_about.scss
@@ -1,29 +1,106 @@
-.about{
-	.block{
-		
-		h2{
-			padding-top: 35px;
-			margin:0;
-		}
-		p{
-			padding-top: 20px;
-			line-height:28px;
-		}
-		img{
-			width: 100%;
-		}
-	}
-	.about-img {
-		overflow:hidden;
-		&:hover img {
-			transform: scale3D(1.1,1.1,1);
-		}
-		img {
-			opacity: .6;
-			@include transition (all, 0.5s, ease-out);
-		}
-	}
-	.section-title {
-		margin-bottom: 0px;
-	}
+.about {
+  text-align: center;
+  padding: 90px 0;
+
+  .about-item {
+    padding-bottom: 30px;
+
+    i {
+      font-size: 60px;
+      color: $primary-color;
+    }
+
+    h4 {
+      padding-top: 15px;
+      margin: 0;
+      font-weight: 500;
+      text-transform: uppercase;
+    }
+
+    p {
+      padding-top: 10px;
+      margin: 0;
+    }
+  }
+}
+
+.dark.about {
+  .title {
+    color: $light;
+  }
+
+  .about-item {
+    text-align: center;
+    padding: 0 10px;
+    padding-top: 30px;
+    @include mobile {
+      padding: 0;
+      padding-top: 30px;
+    }
+
+    i {
+      font-size: 50px;
+      color: $light;
+    }
+
+    h4 {
+      color: $light;
+      padding-top: 15px;
+      margin: 0;
+      font-weight: 500;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+    }
+
+    p {
+      padding-top: 10px;
+      margin: 0;
+    }
+  }
+}
+
+.about-about {
+  p {
+    line-height: 28px;
+  }
+}
+
+.about-arrow {
+  .block {
+    padding: 70px 30px;
+    text-align: center;
+
+    @include mobile {
+      padding: 60px 10px;
+    }
+
+    i {
+      font-size: 40px;
+      display: inline-block;
+      margin-bottom: 15px;
+    }
+
+    p {
+      color: $light;
+      margin-bottom: 0;
+    }
+
+    h3 {
+      font-size: 24px;
+    }
+  }
+}
+
+.about-list {
+  .block {
+    padding: 30px;
+    margin-bottom: 20px;
+    background: $light;
+    @include mobile {
+      padding: 30px 20px;
+    }
+    p {
+      margin-bottom: 0;
+    }
+  }
 }
