--- a/source/scss/templates/_backgrounds.scss
+++ b/source/scss/templates/_backgrounds.scss
@@ -1,13 +1,19 @@
-.bg-1 {
-	background-image: url("../images/call-to-action-bg.jpg");
+.call-to-action-bg {
+	background-image: url("../images/call-to-action-bg.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 
 }
 
-.bg-2 {
-	background: url("../images/featue-bg.jpg");
+.feature-bg {
+	background: url("../images/feature-bg.png");
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+.contact-bg {
+	background: url("../images/contact-bg.png");
 	background-size: cover;
 	background-attachment: fixed;
 }
