--- a/source/scss/templates/_contact.scss
+++ b/source/scss/templates/_contact.scss
@@ -11,7 +11,7 @@
         background: #F6F8FA;
         height: 60px;
         padding: 10px 20px;
-        border: 1px solid #EEF2F6;
+        border: 1px solid #4A90E2;
         box-shadow: none;
         width: 100%;
       }
@@ -23,7 +23,7 @@
       textarea {
         background: #F6F8FA;
         height: 135px;
-        border: 1px solid #EEF2F6;
+        border: 1px solid #4A90E2;
         box-shadow: none;
         width: 100%;
         padding: 15px 20px;
