--- a/source/partials/blocks/landing-slider.htm
+++ b/source/partials/blocks/landing-slider.htm
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1 class="animated fadeInUp">Willkommen bei der Deutschen Bildungsstiftung
+                    <h1 class="animated fadeInUp" style="word-break: break-word;">Willkommen bei der Deutschen Bildungs&#8203stiftung
                     </h1>
                     <p class="animated fadeInUp">Förderung der Bildung in ganz Deutschland durch kollaborativen Vermögensaufbau und transparente Fondsverwaltung.
                     </p>
