--- a/source/partials/header.htm
+++ b/source/partials/header.htm
@@ -10,16 +10,15 @@
   <!-- Mobile Specific Metas
   ================================================== -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Creative Agency Bootstrap Template">
+  <meta name="description" content="Deutsche Bildungsstiftung">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="theme-name" content="airspace">
-  <meta name="generator" content="Themefisher Airspace Template v1.0">
+  <meta name="author" content="Deutsche Bildungsstiftung">
+  <meta name="robots" content="noindex, nofollow">
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
   <!-- bootstrap.min css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Ionic Icon Css -->
   <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
   <!-- animate.css -->
